--- a/non-django-pages/redhat.html
+++ b/non-django-pages/redhat.html
@@ -1,224 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Required meta tags -->
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Tamu Cybersecurity Club</title>
-
-	<link rel="shortcut icon" href="./img/favicon.ico">
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<!-- Style.css -->
-	<link rel="stylesheet" href="./css/style.css">	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-	<!-- Font Awesome -->
-	<script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">  
-  
+  <title>Texas A&M Cybersecurity</title>
+  <link rel="icon" type="image/png" href="./img/club-logos/blackShieldWhiteLogo750x750.png">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
+<style>
+</style>
 <body>
 
-	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg static-top bg-black">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="#home"></a>
-			<div class="h4 text-white text-capitalized text-center">
-				<span class="text-maroon">Tamu</span> Cyber<span class="text-maroon">security</span> Club
-			</div>
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-				<span class="custom-toggler-icon"><i class="fas fa-bars"></i></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="./index.html">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="./about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="./calander.html">Calander</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="./events.html">Events</a>
-					</li>
-					<li class="nav-item dropdown">
-						<div class="nav-link dropdown-toggle" data-target="./partners.html" target="_blank" href="./partners.html" id="navbarDropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Partners
-						</div>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-							<a class="dropdown-item" href="./wicys.html">WiCyS</a>
-							<a class="dropdown-item" href="./redhat.html">Red Hat Academy</a>
-							<!-- <div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Sponsors</a> -->
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="./resources.html">Resources</a>
-					</li>
-					<!-- <li class="nav-item">
-						<a class="nav-link" href="./resources.html">Login</a>
-					</li> -->
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- End Navigation -->
-  
-  <!-- Start About -->
-  <div class="container-fluid mt-3">
-    <div class="row os-animation" data-animation="fadeInRight">
-      <h2 class="w-100 font-weight-bold text-white text-center" style="letter-spacing: .5px;">What Is Red Hat Academy?</h2>
-      <hr class="w-25 border-maroon mb-2">
+  <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
+  <nav class="navbar navbar-expand-xl static-top">
+    <div>
+      <a class="navbar-brand my-auto" href="#">
+        <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
+      </a>
+        <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
     </div>
-    <div class="os-animation" data-animation="fadeInLeft">
-      <div class="row d-flext justify-content-center text-center">
-        <div class="col-sm-10 col-md-8 col-lg-9">
-          <p class="font-weight-bold lead text-white m-0 p-2">
-            The Red Hat Academy is an academic training program developed by Red Hat to bridge the gap between industry and education by partnering with educational institutions. 
-            At Texas A&M, the Cybersecurity Center has partnered with Red Hat to help students acquire enterprise-ready skills and provide learning material that may not be regularly taught in an academic curriculum. 
-            The Red Hat Academy curriculum focuses on enterprise Linux and open source technologies.
-          </p>
-        </div>
-      </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="fa fa-bars" style="color:#fff"></i></button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <style>
+      </style>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link nav-link-fade-up px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-fade-up px-0" href="./about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-fade-up px-0" href="./calendar.html">Calendar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-fade-up px-0" href="./events.html">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-fade-up nav-link-fade-up-active px-0" href="./partners.html">Partners</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-fade-up px-0" href="./contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-fade-up px-0" href="./login.html">Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- End Navigation -->
+  <style>
+
+  </style>
+
+  <div class="container">
+    <div class="row">
+      <div class="card__face card__face--front">front</div>
+      <div class="card__face card__face--back">back</div>
     </div>
   </div>
-  <!-- End About -->
 
-  <!-- Start Why -->
-  <div class="container-fluid mt-3">
-    <div class="row os-animation" data-animation="fadeInRight">
-      <h2 class="w-100 font-weight-bold text-white text-center" style="letter-spacing: .5px;">Why Join?</h2>
-      <hr class="w-25 border-maroon mb-2">
-    </div>
-    <div class="os-animation" data-animation="fadeInLeft">
-      <div class="row d-flext justify-content-center text-center">
-        <div class="col-sm-10 col-md-8 col-lg-9">
-          <p class="font-weight-bold lead text-white m-0 p-2">
-            The program focuses on teaching relevant and in-demand skills to further your career and job prospects. 
-            With more than 90% of the global fortune 500 companies using red hat products and solutions, this program can differential yourself from other students by learning material that may not have been traditionally taught through academia. 
-            We plan to provide valuable experience through hands-on labs that will help you towards earning a certification and building more confidence in your skills. 
-          </p>
-        </div>
+
+
+
+
+
+  <!-- Footer -->
+  <footer class="footer bg-black mt-3">
+    <div class="container">
+      <div class="row justify-content-center my-3 pt-2">
+        <h1 class="text-white text-uppercase inconsolata-font">Stay in touch</h1>
+      </div>
+      <div class="row justify-content-center text-center bg-black">
+        <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
+        <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
+        <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
     </div>
-  </div>
-  <!-- End Why -->
-
-  <!-- Start About -->
-  <div class="container-fluid mt-3">
-    <div class="row os-animation" data-animation="fadeInRight">
-      <h2 class="w-100 font-weight-bold text-white text-center" style="letter-spacing: .5px;">Who is Red Hat?</h2>
-      <hr class="w-25 border-maroon mb-2">
+		<div class="text-white text-center mt-4 bg-black" >
+			<h5 class="p-0 m-0 inconsolata-font">Texas A&M Cybersecurity Club <span class="year"></span></a></h5>
     </div>
-    <div class="os-animation" data-animation="fadeInLeft">
-      <div class="row d-flext justify-content-center text-center">
-        <div class="col-sm-10 col-md-8 col-lg-9">
-          <p class="font-weight-bold lead text-white m-0 p-2">
-            Red Hat is the world’s leading provider of enterprise open source software solutions and a <a href="https://www.redhat.com/en/about/trusted" class="text-maroon" style="text-decoration:none;">trusted adviser</a> to the Fortune 500. 
-            Red Hat's portfolio covers a variety of technologies such as containers, cloud computing, Linux, virtualization, and storage to name a few.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End About -->
+  </footer>
+  <!--End Footer -->
 
-  <!-- Start Officers Photos -->
-  <div class="container my-3">
-    <div class="os-animation" data-animation="fadeInDown">
-      <div class="row">
-        <h2 class="w-100 font-weight-bold text-white text-center mt-2" style="letter-spacing: .5px;">Texas A&M Red Hat Student Ambassadors</h2>
-        <hr class="w-50 border-maroon mb-4">
-      </div>
-    </div>
-
-    <div class="row d-flex justify-content-center">
-      <!-- team member 1 -->
-      <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 os-animation" data-animation="fadeInLeft">
-        <div class="card about border-0 shadow">
-          <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title mb-0">Glenn Fitzpatrick</h5>
-            <hr class="m-0 p-0 my-2">
-            <ul class="social-media">
-              <li>
-                <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- team member 2 -->
-      <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4 os-animation" data-animation="fadeInRight">
-        <div class="card about border-0 shadow">
-          <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title mb-0">Jonathan Saenz</h5>
-            <hr class="m-0 p-0 my-2">
-            <ul class="social-media">
-                <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Officers Photos -->
-
-  <!-- Start Calendar -->
-  <div class="container my-3">
-    <div class="os-animation" data-animation="fadeInDown" data-delay="0s">
-      <div class="row">
-        <h2 class="w-100 font-weight-bold text-white text-center mt-2" style="letter-spacing: .5px;">Calendar</h2>
-          <hr class="w-25 border-maroon mb-4">
-      </div>
-    </div>
-    <div class="responsive-iframe-container">
-      <div class="row d-flex align-items-center justify-content-center calendar">
-        <div class="d-md-none">
-          <iframe src="https://calendar.google.com/calendar/b/4/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=dGFtdXJlZGhhdGFjYWRlbXlAZ21haWwuY29t&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%230B8043&amp;showTitle=0&amp;showPrint=0&amp;showDate=1&amp;mode=AGENDA" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div class="d-none d-md-block">
-          <iframe src="https://calendar.google.com/calendar/b/4/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=dGFtdXJlZGhhdGFjYWRlbXlAZ21haWwuY29t&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%230B8043&amp;showTitle=0&amp;showPrint=0&amp;showDate=1" style="border:solid 1px #777" width="500" height="600" frameborder="0" scrolling="no"></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Calendar -->
-
-
-
-	<!-- Footer -->
-	<footer class="d-flex justify-content-center py-2 bg-black text-center">
-		<div class="text-white" >
-			Texas A&M Cybersecurity Club <span class="year"></span></a>
-		</div>
-	</footer>
-	<!-- End Footer -->
-	
-	<!-- Script Source Files -->
-
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	<!-- Bootstrap JS -->
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<!-- Plugins.js -->
-	<script src="./js/plugins.js"></script>
-	<!-- Waypoints -->
-	<script src="./js/jquery.waypoints.min.js"></script>
-	<!-- jQuery CounterUp -->
-	<script src="./js/jquery.counterup.min.js"></script>
-
-	<!-- End of Script Source Files -->
-
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0= "crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
+  <script src="./js/main.js"></script>
 </body>
 </html>
