--- a/non-django-pages/wicys.html
+++ b/non-django-pages/wicys.html
@@ -14,14 +14,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl static-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -29,8 +27,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" style="color:#fff"></i></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <style>
-      </style>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-fade-up px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
@@ -58,6 +54,156 @@
   </nav>
   <!-- End Navigation -->
 
+  <div class="container mt-5">
+    <div class="row justify-content-around">
+      <div class="col-12 col-md-12 col-lg-6 my-2 p-0 align-self-center">
+        <div class="animated fadeInLeft">
+          <img class="img-fluid pr-3" src="./img/partners/wicys/tamuChapterWiCyS.jpg" alt=""/>
+        </div> 
+      </div> 
+      <div class="col-12 col-md-12 col-lg-6 my-2">
+        <div class="animated fadeInRight event-description-right">
+          <div class="text-white text-center pl-3">
+            <h1>Our Mission</h1>
+            <!-- <hr style="color:#fff;height:px"> -->
+            <hr style="background-color:#fff;height:1px;">
+            <p class="lead font-roboto" style="font-size:23px;">
+             WiCyS is a community of engagement, encouragement and support for women in cybersecurity. 
+             Women in CyberSecurity (WiCyS) is the premier organization with a national reach dedicated to bringing
+             together women in cybersecurity from academia, research and industry to share knowledge, experience, networking and mentoring.
+              Our Texas A&M WiCyS is open to meeting new people, so please don’t hesitate to come to an event or talk to us at cyber club meetings!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Officers Photos -->
+  <div class="container text-center">
+    <div class="row animated fadeInUp">
+      <div class="col-12">
+        <h1 class="text-white mt-2 inconsolata-font" style="letter-spacing:.5px;">Our Team</h1>
+        <hr class="border-purple mb-4 about-title-underline">
+      </div>
+    </div>
+
+    <div class="row d-flex justify-content-center">
+      <!-- team member 1 -->
+      <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+        <div class="card about border-0 shadow">
+          <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title mb-0">Madeleine Phillips</h5>
+            <div class="card-text text-black-50">WiCyS President</div>
+            <hr class="m-0 p-0 my-2">
+            <ul class="social-media">
+              <li>
+                <a href="#"><i class="fab fa-linkedin about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github-square about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-link about fa-lg"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- team member 2 -->
+      <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+        <div class="card about border-0 shadow">
+          <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
+          <!-- <img style="width:100%;" src="./img/officers/weijia_yan.jpg" class="card-img-top" alt="..."> -->
+          <div class="card-body">
+            <h5 class="card-title mb-0">Weijia Yan</h5>
+            <div class="card-text text-black-50">Vice President</div>
+            <hr class="m-0 p-0 my-2">
+            <ul class="social-media">
+              <li>
+                <a href="#"><i class="fab fa-linkedin about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github-square about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-link about fa-lg"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- team member 3 -->
+      <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+        <div class="card about border-0 shadow">
+          <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
+          <!-- <img src="./img/officers/emily_murphy.jpg" class="card-img-top" alt="..."> -->
+          <div class="card-body">
+            <h5 class="card-title mb-0">Emily Murphy</h5>
+            <div class="card-text text-black-50">Treasure</div>
+            <hr class="m-0 p-0 my-2">
+            <ul class="social-media">
+              <li>
+                <a href="#"><i class="fab fa-linkedin about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github-square about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-link about fa-lg"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- team member 4 -->
+      <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+        <div class="card about border-0 shadow">
+          <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title mb-0">Alyssa Kalish</h5>
+            <div class="card-text text-black-50">General Officer</div>
+            <hr class="m-0 p-0 my-2">
+            <ul class="social-media">
+              <li>
+                <a href="#"><i class="fab fa-linkedin about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github-square about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-link about fa-lg"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row animated fadeInUp mb-5">
+      <div class="col-12">
+        <h1 class="text-white mt-2 inconsolata-font" style="letter-spacing:.5px;">Contact Us</h1>
+        <hr class="border-purple mb-4 about-title-underline">
+        <p class="text-white lead" style="font-size:30px;">
+          Contact us at <a href="mailto:tamuwicys@gmail.com" style="text-decoration:none; color:#B1D34A">tamuwicys@gmail.com</a> if you have
+          any question or want to get involved!
+        </p>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
   <footer class="footer bg-black mt-3">
     <div class="container">
@@ -67,7 +213,7 @@
       <div class="row justify-content-center text-center bg-black">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
