--- a/non-django-pages/about.html
+++ b/non-django-pages/about.html
@@ -15,14 +15,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl static-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -30,8 +28,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" style="color:#fff"></i></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <style>
-      </style>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-fade-up px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
@@ -63,13 +59,13 @@
   <div class="container-fluid text-center">
     <div class="row animated fadeInDown mt-3">
       <div class="col-12">
-        <h1 class="text-white inconsolata-font" style="letter-spacing: .5px;">About Us</h1>
+        <h1 class="text-white inconsolata-font" style="letter-spacing:.5px;">About Us</h1>
         <hr class="border-maroon mb-2 about-title-underline">
       </div>
     </div>
     <div class="row d-flext justify-content-center text-center animated fadeInUp">
       <div class="col-sm-10 col-md-8 col-lg-9">
-        <p class="lead inconsolata-font text-white mx-5">
+        <p class="lead inconsolata-font text-white mx-5" style="font-size:23px;">
           Texas A&M Cybersecurity Club is a student-led and student-run organization under the support of Texas A&M Cybersecurity Center. 
           Our goal is to develop and encourage cybersecurity skills and awareness to students willing to learn. 
           No experience is necessary so come join our meetings and events to learn, network, compete, and have fun. 
@@ -84,7 +80,7 @@
   <div class="container text-center">
     <div class="row animated fadeInUp">
       <div class="col-12">
-        <h1 class="text-white mt-2 inconsolata-font" style="letter-spacing: .5px;">Our Team</h1>
+        <h1 class="text-white mt-2 inconsolata-font" style="letter-spacing:.5px;">Our Team</h1>
         <hr class="border-maroon mb-4 about-title-underline">
       </div>
     </div>
@@ -166,13 +162,11 @@
           </div>
         </div>
       </div>
-      <style>
-      </style>
       <!-- team member 4 -->
       <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
         <div class="card about border-0 shadow">
           <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
-          <!-- <img style="width: 100%;" src="./img/officers/weijia_yan.jpg" class="card-img-top" alt="..."> -->
+          <!-- <img style="width:100%;" src="./img/officers/weijia_yan.jpg" class="card-img-top" alt="..."> -->
           <div class="card-body">
             <h5 class="card-title mb-0">Weijia Yan</h5>
             <div class="card-text text-black-50">Public Relations</div>
@@ -360,7 +354,7 @@
       <div class="row justify-content-center text-center bg-black">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
