--- a/non-django-pages/calendar.html
+++ b/non-django-pages/calendar.html
@@ -14,14 +14,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl static-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -60,10 +58,10 @@
 
   <!-- Calendar -->
   <!-- responsive-iframe-container http://themeloom.com/2013/02/tips-embed-google-maps-and-calendars-in-a-responsive-wordpress-theme/ -->
-  <div class="container" style="min-height: 90vh;">
+  <div class="container" style="min-height:100vh;">
     <div class="row text-center animated fadeInUp mt-3">
       <div class="col-12">
-        <h1 class="text-white inconsolata-font" style="letter-spacing: .5px;">Calendar</h1>
+        <h1 class="text-white inconsolata-font" style="letter-spacing:.5px;">Calendar</h1>
       </div>
     </div>
     <div class="responsive-iframe-container bg-white">
@@ -88,7 +86,7 @@
       <div class="row justify-content-center text-center bg-black">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
