--- a/non-django-pages/events.html
+++ b/non-django-pages/events.html
@@ -14,14 +14,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl static-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -29,8 +27,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" style="color:#fff"></i></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <style>
-      </style>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-fade-up px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
@@ -60,43 +56,41 @@
 
   <!-- Event Start 3 Logos -->
   <div class="container text-white text-center inconsolata-font">
-    <div class="row animated fadeInDown mt-3">
+    <div class="row animated fadeInDown">
       <div class="col-12">
-        <h1 class="text-white" style="letter-spacing: .5px;">Events & Competitions</h1>
+        <h1 class="text-white" style="letter-spacing:.5px;">Events & Competitions</h1>
         <hr class="border-maroon mb-4 events-title-underline">
       </div>
     </div>
     <div class="row d-flex justify-content-around text-center">
       <!-- Collaborate animation-->
-      <div class="col-md-5 col-lg-3 mt-3">
-        <div class="bg-dark px-4 py-2 m-2 shadow-lg animated fadeInLeft" style="border-radius: 10px;">
-          <i class="fas fa-users fa-5x" style="color:white"></i>
-          <h3>Collaborate</h3>
+      <div class="col-md-5 col-lg-3">
+        <div class="bg-black px-4 py-3 mb-2 shadow-lg animated fadeInLeft" style="border-radius:10px;">
+          <i class="fas fa-users fa-5x mb-2" style="color:white"></i>
+          <h3 class="m-0">Collaborate</h3>
           <div>
           </div>
         </div> 
       </div>
       <!-- Compete animation-->
-      <div class="col-md-5 col-lg-3 mt-3">
-        <div class="bg-dark px-4 py-2 m-2 shadow-lg animated fadeInUp" style="border-radius: 10px;">
-          <i class="fas fa-trophy fa-5x" style="color:white;"></i> 
-          <h3>Compete<h3>
+      <div class="col-md-5 col-lg-3">
+        <div class="bg-black px-4 py-3 mb-2 shadow-lg animated fadeInUp" style="border-radius:10px;">
+          <i class="fas fa-trophy fa-5x mb-2" style="color:white;"></i> 
+          <h3 class="m-0">Compete</h3>
         </div> 
       </div> 
       <!-- Problem solve animation -->
-      <div class="col-md-5 col-lg-3 mt-3">
-        <div class="bg-dark px-4 py-2 my-2 shadow-lg animated fadeInRight" style="border-radius: 10px;">
-          <i class="fas fa-unlock fa-5x" style="color:white;"></i>
-          <h3> Problem Solve</h3>
+      <div class="col-md-5 col-lg-3">
+        <div class="bg-black px-4 py-3 mb-2 shadow-lg animated fadeInRight" style="border-radius:10px;">
+          <i class="fas fa-unlock fa-5x mb-2" style="color:white;"></i>
+          <h3 class="m-0">Problem Solve</h3>
         </div> 
       </div> 
     </div>
   </div>
   <!-- End 3 Logos -->
 
-
-  <div id="competitions" class="container-fluid text-white inconsolata-font" style="margin-top: 20px;">
-
+  <div id="competitions" class="container-fluid text-white inconsolata-font" style="margin-top:20px;">
       <!-- Two Column Section -->
       <div class="row px-4 justify-content-center">
         <div class="col-md-3 my-auto text-center">
@@ -162,9 +156,6 @@
     </div>
   </div>
 
-
-
-
   <!-- Footer -->
   <footer class="footer bg-black mt-3">
     <div class="container">
@@ -174,7 +165,7 @@
       <div class="row justify-content-center text-center bg-black">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
