--- a/non-django-pages/index.html
+++ b/non-django-pages/index.html
@@ -14,14 +14,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl fixed-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -29,8 +27,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" style="color:#fff"></i></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <style>
-      </style>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-fade-up nav-link-fade-up-active px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
@@ -81,7 +77,7 @@
 			<h3 class="white-faded-shadow animated fadeInUp">Cybersecurity Club<h3>
       <div class="animated fadeInUp">
         <a href="#features">
-          <img style="max-width: 200px;" class="img-fuild logo-bounce" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
+          <img style="max-width:200px;" class="img-fuild logo-bounce" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
         </a>
       </div>
 		</div>
@@ -89,14 +85,13 @@
   <!-- End Landing Page Title --> 
 
   <!-- Features Section -->	
-	<div id="features" class="offset container-fuild my-4 bg-black">
+	<div id="features" class="offset container-fuild bg-black">
 		<div class="os-animation animated fadeInUp" data-animation="fadeInUp">
 			<div class="row text-center text-white justify-content-center">
 				<div class="col-lg-10 col-xl-9">
 					<h1 class="inconsolata-font">Interested in Cybersecurity?</h1>
-					<div class="title-underline"></div>
-					<!-- <h4 class="roboto-font"> -->
-					<h4 class="inconsolata-font">
+					<div class="title-underline" style="margin:1rem auto 1.0rem;"></div>
+					<h4 class="inconsolata-font" style="margin-bottom:1.0rem;">
 						Texas A&M Cybersecurity Club is an organization for people interested in learning practical skills and knowledge in the cybersecurity field. 
 						Whether you are new or a veteran, our community of students welcomes all skill levels.
 					</h4>
@@ -122,7 +117,6 @@
         </div>
 			</div>
       <!-- End Meetings -->
-
 			<!-- Discord -->
 			<div class="col-md-4">
         <div class="text-center">
@@ -298,7 +292,7 @@
       <div class="row justify-content-center text-center">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
