--- a/non-django-pages/login.html
+++ b/non-django-pages/login.html
@@ -14,14 +14,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl static-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -29,8 +27,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" style="color:#fff"></i></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <style>
-      </style>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-fade-up px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
@@ -59,17 +55,16 @@
   <!-- End Navigation -->
 
   <!-- https://startbootstrap.com/snippets/login/ -->
-  <div class="container" style="min-height: 100vh;">
+  <div class="container" style="min-height:100vh;">
     <div class="row text-center animated fadeInUp mt-3">
       <div class="col-12">
-        <h1 class="text-white inconsolata-font" style="letter-spacing: .5px;">Sign In</h1>
+        <h1 class="text-white inconsolata-font" style="letter-spacing:.5px;">Sign In</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin">
+        <div class="card card-signin text-white" style="background:#000;">
           <div class="card-body">
-            <!-- <h5 class="card-title text-center">Sign In</h5> -->
             <form class="form-signin">
               <div class="form-group">
                 <label for="inputEmail">Email address</label>
@@ -80,12 +75,12 @@
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
               </div>
               <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
-              <hr class="my-4">
+              <hr class="my-4" style="background:#fff">
               <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
             </form>
-            <div class="row mt-3 justify-content-between mx-1">
-              <div class="d-inline h6"><a href="#" target="blank" style="text-decoration: none;"> Create Account</a></div>
-              <div class="d-inline h6"><a href="#" target="blank" style="text-decoration: none;"> Forgot Password?</a></div>
+            <div class="row mt-3 justify-content-between mx-1 accounts">
+              <div class="d-inline font-weight-bold"><a href="./register.html"> Create Account</a></div>
+              <div class="d-inline font-weight-bold"><a href="#"> Forgot Password?</a></div>
             </div>
           </div>
         </div>
@@ -102,7 +97,7 @@
       <div class="row justify-content-center text-center bg-black">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
