--- a/non-django-pages/redhat.html
+++ b/non-django-pages/redhat.html
@@ -14,14 +14,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <script src="https://kit.fontawesome.com/b9d296bf83.js" crossorigin="anonymous"></script>
 </head>
-<style>
-</style>
-<body>
 
+<body>
   <!-- Navigation  https://getbootstrap.com/docs/4.0/components/navbar/ -->
   <nav class="navbar navbar-expand-xl static-top">
     <div>
-      <a class="navbar-brand my-auto" href="#">
+      <a class="navbar-brand my-auto" href="./index.html">
         <img class="img-fluid" src="./img/club-logos/blackShieldWhiteLogo750x750.png" alt=""> 
       </a>
         <div class="navbar-brand-title d-inline align-middle">Cybersecurity Club</div>
@@ -29,8 +27,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" style="color:#fff"></i></button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <style>
-      </style>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link nav-link-fade-up px-0" href="./index.html">Home <span class="sr-only">(current)</span></a>
@@ -57,21 +53,100 @@
     </div>
   </nav>
   <!-- End Navigation -->
-  <style>
 
-  </style>
+<!-- https://www.w3schools.com/tags/att_a_target.asp -->
+<style>
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 145px;
+  border: none;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+  border-radius: 7px;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  /*color: #fff;*/
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: #fff;
+  color: #000;
+  transform: rotateY(180deg);
+}
+</style>
 
   <div class="container">
     <div class="row">
-      <div class="card__face card__face--front">front</div>
-      <div class="card__face card__face--back">back</div>
+      <div class="col">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front" style="font-size:30px;">
+              <div class="">
+                Red Hat System Administration I	(RH124)
+              </div>
+            </div>
+            <div class="flip-card-back">
+              <div>
+                <a href="#" target="_blank"><button type="button" class="btn btn-outline-secondary">Learn More</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front" style="font-size:30px;">
+              <div class="">
+                Red Hat System Administration II (RH134)
+              </div>
+            </div>
+            <div class="flip-card-back">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front" style="font-size:30px;">
+              Red Hat System Administration III (RH254)
+            </div>
+            <div class="flip-card-back">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-
-
-
-
 
   <!-- Footer -->
   <footer class="footer bg-black mt-3">
@@ -82,7 +157,7 @@
       <div class="row justify-content-center text-center bg-black">
         <div class="twitter col-5 col-sm-4 col-md-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
         <div class="github col-5 col-sm-4 col-md-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+        <div class="discord col-5 col-sm-4 col-md-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
         <div class="facebook col-5 col-sm-4 col-md-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
         <div class="linkedin col-5 col-sm-4 col-md-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
       </div>
